[package]
name = "jstar-sys"
version = "0.1.0+1.9.0"
edition = "2021"
authors = ["Fabrizio Pietrucci <mail@fabrizio-pietrucci.it>"]
links = "jstar"
build = "build.rs"
license = "MIT"
repository = "https://github.com/bamless/jstar-rs"
documentation = "https://docs.rs/jstar-sys"
description = "Native bindings to the J* language C API"

[lib]
name = "jstar_sys"

[build-dependencies]
pkg-config = "0.3.27"
cmake = "0.1.50"
glob = "0.3.1"

[features]
vendored = []
static = []
